--- a/example.html
+++ b/example.html
@@ -5,7 +5,6 @@
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="./jquery.dynoform.js"></script>
-
     <script type="text/javascript">
     var form = {
         "name" : "form_1",
@@ -13,13 +12,14 @@
         "method":"POST",
         "action":"."
     };
-    fieldsets = [["Personal Details", "personal", {}], ["Education", "education", {}], ["Contacts", "contacts", {}], ["Survey", "survey", {}]];
+    fieldsets = [["Personal Details", "personal", {}], ["Contacts", "contacts", {}], ["Survey", "survey", {}]];
     var fields = [
         {
             "name":"full_name",
             "label": "Full Name",
             "fieldset":"personal",
-            "type": "text"
+            "type": "text",
+            "extra_attributes": {"placeholder":"Enter Full Name"}
         },
         {
             "name": "nick_name",
@@ -32,25 +32,7 @@
             "fieldset":"personal",
             "label":"Date of Birth",
             "type":"text"
-        },
-        {
-            "name": "school_name",
-            "fieldset": "education",
-            "label":"School",
-            "type": "text"
-        },
-        {
-            "name": "date_of_joining",
-            "fieldset":"education",
-            "label":"Date of Joining",
-            "type":"text"
-        },
-        {
-            "name": "class",
-            "fieldset": "education",
-            "label":"Class Studying Currently",
-            "type": "text"
-        },
+        },                        
         {
             "name": "contact_phone",
             "fieldset":"contacts",
@@ -100,14 +82,26 @@
         }
     ];
 
-    var values = {};
+    var values = {"full_name":"John Doe", "nick_name":"JD", "food":"yes", "vehicles":["car", "motor"]};
     jQuery(document).ready(function(){
         jQuery(".form_container").dynoForm({"form":form, "fields":fields, "buttons":buttons, "fieldsets":fieldsets});
+        jQuery(".form_container_2").dynoForm({"form":form, "fields":fields, "buttons":buttons, "fieldsets":fieldsets, "values":values});
     });
 
     </script>
 </head>
 <body>
+<div class="navbar navbar-inverse">
+    <div class="navbar-inner">
+        <ul class="nav">
+          <li class="active">
+            <a href="#">Home</a>
+          </li>
+          <li><a href="#basic_example">Basic Example</a></li>
+          <li><a href="#setting_values">Setting Values</a></li>
+        </ul>
+    </div>
+</div>
 <div class="container">
     <div class="row">
         <div class="span12">
@@ -126,7 +120,8 @@
             </dl>
         </div>
     </div>
-    <div class="row">
+    <hr />
+    <div class="row" id="basic_example">
         <div class="span6">
             <h3>Output</h3>
             <div class="form_container"></div>
@@ -140,7 +135,7 @@ var form = {
     "method":"POST",
     "action":"."
 };
-fieldsets = [["Personal Details", "personal", {}], ["Education", "education", {}], ["Contacts", "contacts", {}], ["Survey", "survey", {}]];
+fieldsets = [["Personal Details", "personal", {}], ["Contacts", "contacts", {}], ["Survey", "survey", {}]];
 var fields = [
     {
         "name":"full_name",
@@ -159,24 +154,6 @@ var fields = [
         "fieldset":"personal",
         "label":"Date of Birth",
         "type":"text"
-    },
-    {
-        "name": "school_name",
-        "fieldset": "education",
-        "label":"School",
-        "type": "text"
-    },
-    {
-        "name": "date_of_joining",
-        "fieldset":"education",
-        "label":"Date of Joining",
-        "type":"text"
-    },
-    {
-        "name": "class",
-        "fieldset": "education",
-        "label":"Class Studying Currently",
-        "type": "text"
     },
     {
         "name": "contact_phone",
@@ -231,6 +208,26 @@ var values = {};
 jQuery(document).ready(function(){
     jQuery(".form_container").dynoForm({"form":form, "fields":fields, "buttons":buttons, "fieldsets":fieldsets});
 });
+            </pre>
+        </div>
+    </div>
+    <hr />
+    <div class="row" id="setting_values">
+        <div class="span6">
+            <h3>Output</h3>
+            <div class="form_container_2"></div>
+        </div>
+        <div class="span6">
+            <h3>Code</h3>
+            <pre>
+                var values = {"full_name":"John Doe", "nick_name":"JD", "food":"yes", "vehicles":["car", "motor"]};
+                jQuery(".form_container_2").dynoForm({
+                    "form":form,
+                    "fields":fields,
+                    "buttons":buttons,
+                    "fieldsets":fieldsets,
+                    "values": values
+                });
             </pre>
         </div>
     </div>
