--- a/examples/index.html
+++ b/examples/index.html
@@ -4,91 +4,8 @@
     <title>Example: Dyno Forms</title>
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script type="text/javascript" src="./jquery.dynoform.js"></script>
-    <script type="text/javascript">
-    var form = {
-        "name" : "form_1",
-        "id" : "form_1",
-        "method":"POST",
-        "action":"."
-    };
-    fieldsets = [["Personal Details", "personal", {}], ["Contacts", "contacts", {}], ["Survey", "survey", {}]];
-    var fields = [
-        {
-            "name":"full_name",
-            "label": "Full Name",
-            "fieldset":"personal",
-            "type": "text",
-            "extra_attributes": {"placeholder":"Enter Full Name"}
-        },
-        {
-            "name": "nick_name",
-            "fieldset":"personal",
-            "label":"Nick Name",
-            "type":"text"
-        },
-        {
-            "name": "date_of_birth",
-            "fieldset":"personal",
-            "label":"Date of Birth",
-            "type":"text"
-        },                        
-        {
-            "name": "contact_phone",
-            "fieldset":"contacts",
-            "label":"Contact Number",
-            "type": "text"
-        },
-        {
-            "name": "address",
-            "fieldset":"contacts",
-            "label":"Address",
-            "type": "textarea"
-        },
-        {
-            "name": "city",
-            "fieldset":"contacts",
-            "label":"City",
-            "type": "select",
-            "options":[["Chennai","chn"],["Mumbai","mum"],["New Delhi","del"]]
-        },
-        {
-            "name": "vehicles",
-            "fieldset":"survey",
-            "label":"What are the types of vehicles you own",
-            "type": "checkbox",
-            "options":[["Car","car"],["Motor Cycle","motor"],["Cycle","cycle"]]
-        },
-        {
-            "name": "food",
-            "fieldset":"survey",
-            "label":"Do you like Mexican Food ?",
-            "type": "radio",
-            "options":[["Yes","yes"],["No","no"],["May Be","maybe"]]
-        }
-
-    ];
-
-    var buttons = [
-        {
-            "type":"submit",
-            "class":"btn btn-primary",
-            "value":"Save"
-        },
-        {
-            "type":"reset",
-            "class":"btn",
-            "value": "Clear"
-        }
-    ];
-
-    var values = {"full_name":"John Doe", "nick_name":"JD", "food":"yes", "vehicles":["car", "motor"]};
-    jQuery(document).ready(function(){
-        jQuery(".form_container").dynoForm({"form":form, "fields":fields, "buttons":buttons, "fieldsets":fieldsets});
-        jQuery(".form_container_2").dynoForm({"form":form, "fields":fields, "buttons":buttons, "fieldsets":fieldsets, "values":values});
-    });
-
-    </script>
+    <script type="text/javascript" src="../jquery.dynoform.js"></script>
+    <script type="text/javascript" src="example.js"></script>
 </head>
 <body>
 <div class="navbar navbar-inverse">
@@ -216,6 +133,26 @@ jQuery(document).ready(function(){
         <div class="span6">
             <h3>Output</h3>
             <div class="form_container_2"></div>
+        </div>
+        <div class="span6">
+            <h3>Code</h3>
+            <pre>
+                var values = {"full_name":"John Doe", "nick_name":"JD", "food":"yes", "vehicles":["car", "motor"]};
+                jQuery(".form_container_2").dynoForm({
+                    "form":form,
+                    "fields":fields,
+                    "buttons":buttons,
+                    "fieldsets":fieldsets,
+                    "values": values
+                });
+            </pre>
+        </div>
+    </div>
+
+    <div class="row" id="setting_errors">
+        <div class="span6">
+            <h3>Output</h3>
+            <div class="form_container_3"></div>
         </div>
         <div class="span6">
             <h3>Code</h3>
