--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Example: Dyno Forms</title>
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script type="text/javascript" src="../jquery.dynoform.js"></script>
+    <script type="text/javascript" src="jquery.dynoform.js"></script>
     <script type="text/javascript" src="example.js"></script>
 </head>
 <body>
