--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>Example: Dyno Forms</title>
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script type="text/javascript" src="../jquery.dynoform.js"></script>
     <style type="text/css">
         body{
             height: 100%;
@@ -20,15 +19,15 @@
 <div class="navbar navbar-inverse">
     <div class="navbar-inner">
         <ul class="nav">
-          <li class="active"><a href="./homepage.html" target="target_frame">Home</a></li>
-          <li><a href="./basic.html" target="target_frame">Basic Usage</a></li>
-          <li><a href="./values.html" target="target_frame">Setting Values</a></li>
-          <li><a href="./errors.html" target="target_frame">Setting Errors</a></li>
-          <li><a href="./remote.html" target="target_frame">Ajax Loading</a></li>
+          <li class="active"><a href="./examples/homepage.html" target="target_frame">Home</a></li>
+          <li><a href="./examples/basic.html" target="target_frame">Basic Usage</a></li>
+          <li><a href="./examples/values.html" target="target_frame">Setting Values</a></li>
+          <li><a href="./examples/errors.html" target="target_frame">Setting Errors</a></li>
+          <li><a href="./examples/remote.html" target="target_frame">Ajax Loading</a></li>
         </ul>
     </div>
 </div>
-<iframe id="target_frame" name="target_frame" src="./homepage.html"></iframe>
+<iframe id="target_frame" name="target_frame" src="./examples/homepage.html"></iframe>
 
 </body>
 </html>
