--- a/examples/errors.html
+++ b/examples/errors.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Example: Dyno Forms</title>
+    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="../jquery.dynoform.js"></script>
     <script type="text/javascript" src="example.js"></script>
@@ -11,7 +12,6 @@
                 "form":form,
                 "fields":fields_small,
                 "buttons":buttons,
-                "fieldsets":fieldsets_small,
                 "values":values,
                 "errors":errors,
                 "global_errors":global_errors,
