--- a/examples/values.html
+++ b/examples/values.html
@@ -2,12 +2,13 @@
 <html>
 <head>
     <title>Example: Dyno Forms</title>
+    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script type="text/javascript" src="../jquery.dynoform.js"></script>
     <script type="text/javascript" src="example.js"></script>
     <script type="text/javascript">
         jQuery(document).ready(function(){
-            jQuery(".form_container").dynoForm({"form":form, "fields":fields_small, "buttons":buttons, "fieldsets":fieldsets_small, "values":values});
+            jQuery(".form_container").dynoForm({"form":form, "fields":fields_small, "buttons":buttons, "values":values});
         });
     </script>
 </head>
@@ -22,7 +23,6 @@
             "form":form,
             "fields":fields,
             "buttons":buttons,
-            "fieldsets":fieldsets,
             "values": values
         });
     </pre>
