support for custom layouts

--- a/examples/layouts.html
+++ b/examples/layouts.html
@@ -13,7 +13,7 @@
             jQuery(".form_container_default").dynoForm({"form":form, "fields":fields_full, "buttons":buttons});
             jQuery(".form_container_inline").dynoForm({"form":form, "fields":fields_full, "buttons":buttons, "layout":"inline"});
             jQuery(".form_container_two").dynoForm({"form":form, "fields":fields_full, "buttons":buttons, "layout":"2-column"});
-            jQuery(".form_container_custom").dynoForm({"form":form, "fields":fields_full, "buttons":buttons});
+            jQuery(".form_container_custom").dynoForm({"form":form, "fields":fields_full, "buttons":buttons, "layout":custom_layout});
         });
     </script>
 </head>
